# create an executable that runs the tests designed for the NdsVector data structure
add_executable(ndsvectortests ndsvectortests.c)
set_target_properties(ndsvectortests PROPERTIES COMPILE_FLAGS "-std=c99 -O3 -Werror -pedantic -Wall -Wextra -Wdeclaration-after-statement -Wshadow -Wpointer-arith -Wcast-qual")
target_link_libraries(ndsvectortests nds)

# define unit tests for the NdsVector
add_test(NAME test_1_nds_vector_new COMMAND ndsvectortests 1)
add_test(NAME test_2_nds_vector_new COMMAND ndsvectortests 2)
add_test(NAME test_1_nds_vector_new_with_capacity COMMAND ndsvectortests 3)
add_test(NAME test_2_nds_vector_new_with_capacity COMMAND ndsvectortests 4)
add_test(NAME test_3_nds_vector_new_with_capacity COMMAND ndsvectortests 5)
add_test(NAME test_1_nds_vector_destroy COMMAND ndsvectortests 6)
add_test(NAME test_2_nds_vector_destroy COMMAND ndsvectortests 7)
add_test(NAME test_3_nds_vector_destroy COMMAND ndsvectortests 8)
add_test(NAME test_1_nds_vector_is_empty COMMAND ndsvectortests 9)
add_test(NAME test_2_nds_vector_is_empty COMMAND ndsvectortests 10)
add_test(NAME test_3_nds_vector_is_empty COMMAND ndsvectortests 11)
add_test(NAME test_1_nds_vector_size COMMAND ndsvectortests 12)
add_test(NAME test_2_nds_vector_size COMMAND ndsvectortests 13)
add_test(NAME test_3_nds_vector_size COMMAND ndsvectortests 14)
add_test(NAME test_1_nds_vector_resize COMMAND ndsvectortests 15)
add_test(NAME test_2_nds_vector_resize COMMAND ndsvectortests 16)
add_test(NAME test_3_nds_vector_resize COMMAND ndsvectortests 17)
add_test(NAME test_4_nds_vector_resize COMMAND ndsvectortests 18)
add_test(NAME test_5_nds_vector_resize COMMAND ndsvectortests 19)
add_test(NAME test_6_nds_vector_resize COMMAND ndsvectortests 20)
add_test(NAME test_7_nds_vector_resize COMMAND ndsvectortests 21)
add_test(NAME test_1_nds_vector_capacity COMMAND ndsvectortests 22)
add_test(NAME test_2_nds_vector_capacity COMMAND ndsvectortests 23)
add_test(NAME test_3_nds_vector_capacity COMMAND ndsvectortests 24)
add_test(NAME test_1_nds_vector_reserve COMMAND ndsvectortests 25)
add_test(NAME test_2_nds_vector_reserve COMMAND ndsvectortests 26)
add_test(NAME test_3_nds_vector_reserve COMMAND ndsvectortests 27)
add_test(NAME test_4_nds_vector_reserve COMMAND ndsvectortests 28)
add_test(NAME test_5_nds_vector_reserve COMMAND ndsvectortests 29)
add_test(NAME test_1_nds_vector_shrink_to_fit COMMAND ndsvectortests 30)
add_test(NAME test_2_nds_vector_shrink_to_fit COMMAND ndsvectortests 31)
add_test(NAME test_3_nds_vector_shrink_to_fit COMMAND ndsvectortests 32)
add_test(NAME test_4_nds_vector_shrink_to_fit COMMAND ndsvectortests 33)
